[package]
name = "matrix_mult2"
version = "0.1.0"
authors = ["AtrixMU <matas@udris.lt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
rand = "0.7.3"
itertools = "0.9.0"